--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,12 +5,16 @@
 
 <div>
   <a href = '{% url "create-room"  %}'>create-room</a>
+  <hr>
   <div>
     {% for room in rooms %}
     <div>
       <span>@{{room.host.username}}</span>
       <h5>{{room.id}} -- <a href ="{% url 'room' room.id %}">{{room.name}}</a></h5>
       <small>{{room.topic.name}}</small>
+      <br>
+      <a href="{% url 'update-room' room.id %}">Edit</a>
+      <a href="{% url 'delete-room' room.id %}">Delete</a>
       <hr>
     </div>
     {% endfor %}
