--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,39 +4,25 @@
 <style>
   .home-container{
     display: grid;
-    grid-template-columns: 1fr 3fr; #1/3
+    grid-template-columns: 1fr 3fr 1fr;
   }
 </style>
 
 <div class = 'home-container'>
   <div>
-    <h3>Browse Topics</h3>
+    {% include 'base/topics_component.html' %}
+  </div>
+  <div>
+      <a href = '{% url "create-room"  %}'>create-room</a>
     <hr>
-    <div>
-      <a href ="{% url 'home' %}">All</a>
-    </div>
-    {% for topic in topics %}
-    <div>
-      <a href="{% url 'home' %}?q={{topic.name}}">{{topic}}</a> <!-- we can use query to filter data to display -->
-    </div>
-    {% endfor %}
-  </div>
-  <div>
     <h5>{{room_count}} rooms available</h5>
-    <a href = '{% url "create-room"  %}'>create-room</a>
+
   <div>
-    {% for room in rooms %}
-    <div>
-      <span>@{{room.host.username}}</span>
-      <h5>{{room.id}} -- <a href ="{% url 'room' room.id %}">{{room.name}}</a></h5>
-      <small>{{room.topic.name}}</small>
-      <br>
-      <a href="{% url 'update-room' room.id %}">Edit</a>
-      <a href="{% url 'delete-room' room.id %}">Delete</a>
-      <hr>
-    </div>
-    {% endfor %}
+  {% include 'base/feed_component.html' %}
   </div>
+  </div>
+  <div class ="">
+    {% include 'base/activity_component.html' %}
   </div>
 </div>
 
