--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -24,7 +24,7 @@
 
               <div class="form__group">
               <label for="room_topic">Room Topic</label>
-                <input required type = "text" value = {{room.topic.name}} name = "topic" list ="topic-list" />
+                <input required type = "text" value = "{{room.topic.name}}" name = "topic" list ="topic-list" />
                 <datalist id="topic-list">
                 <select id="room-topic">
                   {% for topic in topics %}
