--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -19,8 +19,8 @@
             <form class="form" action="" method = "POST">
               {% csrf_token %}
               <div class="form__group form__group">
-                <label for="room_name">Username</label>
-                <input id="username" name="username" type="text" placeholder="eg: krish_shah" />
+                <label for="room_name">Email</label>
+                <input id="username" name="email" type="text" placeholder="eg: krish@gmail.com" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
